                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 14-06-2005 fixed: Navigation off the right of list/thumb controls was not functioning.
 - 14-06-2005 changed: Spin control only shows in thumb/list controls if more than 1 page exists.
 - 14-06-2005 changed: All controls now check for conditional visibility.
 - 14-06-2005 changed: Moved fading code into the base control class.
 - 14-06-2005 changed: Removed ability to alter Brightness/Gamma/Contrast from video OSD during Hardware Overlays rendering.
 - 14-06-2005 added: Visualisation settings, and ability to show, select and lock vis presets.
 - 14-06-2005 added: Nicer music OSD during visualisation (thanks to Chokeman for all the nice graphics)
 - 14-06-2005 updated: mplayer.dll (fixes 2x playback speed when volumn amplification was enabled)
 - 14-06-2005 fixed: possible crash in zip file handler.
 - 14-06-2005 changed: weather pictures now in weather.zip (currently disabled).
 - 14-06-2005 added: rar support. since it has to extract the files to disc, it is currently only available for: 
		- .cbr/.rar in my pictures. 
		- compressed (vob)subs (supports a rar within a rar etc)
		- my music.
 - 13-06-2005 changed: fat-x limit setting also affects filemanager.
 - 13-06-2005 fixed: cosmetic problem introduced by previous commit.
 - 13-06-2005 added: ability to select rss feeds update interval.
 - 13-06-2005 fixed: the option to enable autosync in mplayer (smooth audio clock) wasn't taking affect
 - 12-06-2005 added: readstring method to zip file class.
 - 12-06-2005 fixed: seeking after selecting time using seekbar was very slow
 - 12-06-2005 changed: HttpApi: re-enabled database lookup